--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,3 +30,11 @@ jobs:
         dockerfile: Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        addLatest: false
+        addTimestamp: false
+        enableBuildKit: false
+        multiPlatform: false
+        overrideDriver: false
+        pushImage: true
+
+   
