--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,10 +36,11 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Azure login
-      uses: azure/login@v1
+      uses: azure/login@v2
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-        auth-type: SERVICE_PRINCIPAL
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
 
     # Step 6: Push image to ACR
