--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,15 +35,16 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Azure login
-      uses: azure/login@v2
-      with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        auth-type: SERVICE_PRINCIPAL
-      env:
-        ACTIONS_STEP_DEBUG: true
+    - name: Install Azure CLI
+      run: |
+        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+    - name: Azure CLI Login
+      run: |
+        az login --service-principal \
+         --username ${{ secrets.CLIENT_ID }} \
+         --password ${{ secrets.CLIENT_SECRET }} \
+         --tenant ${{ secrets.TENANT_ID }}     
+
       
      
     # Step 6: Push image to ACR
