--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,6 +14,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    defaults : 
+      run :
+         shell : bash
+      
 
     steps:
     - uses: actions/checkout@v4
@@ -25,34 +29,21 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
-    - name: Build & push Docker image
-      uses: mr-smithers-excellent/docker-build-push@v6
-      with:
-        image: shreegurav/java-image
-        tag: latest
-        registry: docker.io
-        dockerfile: Dockerfile
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Install Azure CLI
-      run: |
-        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
-    - name: Azure CLI Login
-      run: |
-        az login --service-principal \
-         --username ${{ secrets.CLIENT_ID }} \
-         --password ${{ secrets.CLIENT_SECRET }} \
-         --tenant ${{ secrets.TENANT_ID }}     
+    - uses: action/checkout@v2
+    - uses: azure/docker-login@v1
+      with :
+        login-server: globalgithubaction.azurecr.io
+        username : ${{ secrets.REGISTRY_USERNAME }}
+        password : ${{ secrets.REGISTRY_PASSWORD }}
+    - run : |
+        docker build . -t globalgithubaction.azurecr.io/myapp:${{github.sha }}
+        docker push globalgithubaction.azurecr.io/myapp:${{github.sha }}
+   
 
       
      
-    # Step 6: Push image to ACR
-    - name: Push image to ACR
-      run: |
-        az acr login --name aks-github-action
-        docker tag myapp/java-image:latest githubactionjava.azurecr.io/myapp/java-image:latest
-        docker push githubactionjava.azurecr.io/myapp/java-image:latest      
+  
 
 
 
