--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: CI_Build
+name: CI_Build and Push to ACR
 
 on:
   push:
@@ -14,37 +14,37 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    defaults : 
-      run :
-         shell : bash
+    defaults: 
+      run:
+        shell: bash
       
-
     steps:
-    - uses: actions/checkout@v4
+    # Step 1: Checkout code
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    # Step 2: Set up JDK 17
     - name: Set up JDK 17
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
         java-version: '17'
+        distribution: 'temurin' # Specify the JDK distribution
         cache: maven
+
+    # Step 3: Build with Maven
     - name: Build with Maven
       run: mvn clean install
 
-
-    - uses: action/checkout@v2
-    - uses: azure/docker-login@v1
-      with :
+    # Step 4: Log in to Azure Container Registry (ACR)
+    - name: Log in to ACR
+      uses: azure/docker-login@v1
+      with:
         login-server: globalgithubaction.azurecr.io
-        username : ${{ secrets.REGISTRY_USERNAME }}
-        password : ${{ secrets.REGISTRY_PASSWORD }}
-    - run : |
-        docker build . -t globalgithubaction.azurecr.io/myapp:${{github.sha }}
-        docker push globalgithubaction.azurecr.io/myapp:${{github.sha }}
-   
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
 
-      
-     
-  
-
-
-
-   
+    # Step 5: Build and Push Docker Image
+    - name: Build and Push Docker Image
+      run: |
+        docker build . -t globalgithubaction.azurecr.io/myapp:${{ github.sha }}
+        docker push globalgithubaction.azurecr.io/myapp:${{ github.sha }}
