--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,3 +48,13 @@ jobs:
       run: |
         docker build . -t globalgithubaction.azurecr.io/myapp:${{ github.sha }}
         docker push globalgithubaction.azurecr.io/myapp:${{ github.sha }}
+        
+    - name: Set up AKS credentials
+      run: az aks get-credentials --resource-group ag-acr-githubsction --name aks-github-action --overwrite-existing
+
+    # Step 6: Deploy to AKS
+    - name: Deploy to AKS
+      run: |
+        kubectl apply -f deployment.yaml
+        kubectl set image deployment/myapp-deployment myapp-container=globalgithubaction.azurecr.io/myapp:${{ github.sha }}
+
