--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,8 +50,14 @@ jobs:
         docker push globalgithubaction.azurecr.io/myapp:${{ github.sha }}
 
     # Step 6: Set up AKS credentials
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     - name: Set up AKS credentials
       run: az aks get-credentials --resource-group ag-acr-githubsction --name aks-github-action --overwrite-existing
+
 
     # Step 7: Deploy to AKS
     - name: Deploy to AKS
