--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,19 +50,19 @@ jobs:
         docker push globalgithubaction.azurecr.io/myapp:${{ github.sha }}
 
     # Step 6: Set up AKS credentials
-    - name: Azure Login
-      uses: azure/login@v1
-      with:
-         client-id: ${{ secrets.AZURE_CLIENT_ID }}
-         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    # - name: Azure Login
+    #   uses: azure/login@v1
+    #   with:
+    #      client-id: ${{ secrets.AZURE_CLIENT_ID }}
+    #      tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+    #      subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-    - name: Set up AKS credentials
-      run: az aks get-credentials --resource-group ag-acr-githubsction --name aks-github-action --overwrite-existing
+    # - name: Set up AKS credentials
+    #   run: az aks get-credentials --resource-group ag-acr-githubsction --name aks-github-action --overwrite-existing
 
 
-    # Step 7: Deploy to AKS
-    - name: Deploy to AKS
-      run: |
-        kubectl apply -f deployment.yaml
-        kubectl set image deployment/myapp-deployment myapp-container=globalgithubaction.azurecr.io/myapp:${{ github.sha }}
+    # # Step 7: Deploy to AKS
+    # - name: Deploy to AKS
+    #   run: |
+    #     kubectl apply -f deployment.yaml
+    #     kubectl set image deployment/myapp-deployment myapp-container=globalgithubaction.azurecr.io/myapp:${{ github.sha }}
