--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,6 +48,8 @@ jobs:
       run: |
         docker build . -t globalgithubaction.azurecr.io/myapp:${{ github.sha }}
         docker push globalgithubaction.azurecr.io/myapp:${{ github.sha }}
+        az acr repository list --name globalgithubaction.azurecr.io --output table
+        az acr repository show-tags --name globalgithubaction.azurecr.io --repository myapp --output table
 
     # Step 6: Set up AKS credentials
     # - name: Azure Login
